--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,3 @@
-
 name: Deploy Infrastructure 
 
 on:
@@ -41,7 +40,7 @@ jobs:
       with:
         args: --acl public-read
       env:
-        SOURCE_DIR: './githu-bactions/terraform.tfstate'
+        SOURCE_DIR: './githubactions/tf.tfstate'
         AWS_REGION: 'us-east-2'
         AWS_S3_BUCKET: 'day5-state-bucket'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
