--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,13 +35,13 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     
-    - name: Sync S3
-      uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl public-read
-      env:
-        SOURCE_DIR: './githubactions/tf.tfstate'
-        AWS_REGION: 'us-east-2'
-        AWS_S3_BUCKET: 'my-main-vpc-bucket'
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    # - name: Sync S3
+    #   uses: jakejarvis/s3-sync-action@master
+    #   with:
+    #     args: --acl public-read
+    #   env:
+    #     SOURCE_DIR: './githubactions/tf.tfstate'
+    #     AWS_REGION: 'us-east-2'
+    #     AWS_S3_BUCKET: 'my-main-vpc-bucket'
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
