--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,19 +29,74 @@ jobs:
     - name: Terraform Validate
       run: terraform validate
     
+    - name: Terraform Plan
+      run: terraform plan
+      env:
+        
     - name: Terraform Apply
       run: terraform apply -auto-approve
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     
-    # - name: Sync S3
-    #   uses: jakejarvis/s3-sync-action@master
-    #   with:
-    #     args: --acl public-read
-    #   env:
-    #     SOURCE_DIR: './githubactions/tf.tfstate'
-    #     AWS_REGION: 'us-east-2'
-    #     AWS_S3_BUCKET: 'my-main-vpc-bucket'
-    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Sync S3
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read
+      env:
+        SOURCE_DIR: './githubactions/tf.tfstate'
+        AWS_REGION: 'us-east-2'
+        AWS_S3_BUCKET: 'my-main-vpc-bucket'
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+        steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v2
+          
+          - name: Setup Terraform
+            uses: hashicorp/setup-terraform@v1
+          
+          - name: Terraform Init
+            run: terraform init
+            env:
+              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
+          - name: Terraform Validate
+            run: terraform validate
+          
+          - name: Terraform Plan
+            run: terraform plan -out=tfplan
+            env:
+              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
+          - name: User Input
+            run: |
+              echo "Please choose an action:"
+              echo "1. Apply"
+              echo "2. Destroy"
+              read -p "Enter your choice: " choice
+              if [ "$choice" == "1" ]; then
+                terraform apply -auto-approve tfplan
+              elif [ "$choice" == "2" ]; then
+                terraform destroy -auto-approve
+              else
+                echo "Invalid choice. Exiting..."
+                exit 1
+              fi
+            env:
+              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          
+          - name: Sync S3
+            uses: jakejarvis/s3-sync-action@master
+            with:
+              args: --acl public-read
+            env:
+              SOURCE_DIR: './githu-bactions/terraform.tfstate'
+              AWS_REGION: 'us-east-2'
+              AWS_S3_BUCKET: 'day5-state-bucket'
+              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
