--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         args: --acl public-read
       env:
-        SOURCE_DIR: './githubactions/tf.tfstate'
+        SOURCE_DIR: 'State-Files/terraform.tfstate'
         AWS_REGION: 'us-east-2'
         AWS_S3_BUCKET: 'my-main-vpc-bucket'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
